style(header): center navigation links and apply white-space nowrap to prevent word wrapping on zoom

--- a/src/app/core/layout/header/header.component.scss
+++ b/src/app/core/layout/header/header.component.scss
@@ -69,6 +69,7 @@
     font-family: $font-arabic;
     display: inline-block;
     text-align: center;
+    white-space: nowrap;
     
     &::after {
       content: '';
